[tool.poetry]
name = "ts2"
version = "0.1.0"
description = ""
authors = ["Godefroid Chapelle <gotcha@bubblenet.be>"]

[tool.poetry.dependencies]
python = "^3.7"
plaster_pastedeploy = "^0.7.0"
pyramid = "^1.10"
pyramid_chameleon = "^0.3.0"
pyramid_debugtoolbar = "^4.5"
waitress = "^1.3"
alembic = "^1.3"
pyramid_retry = "^2.1"
pyramid_tm = "^2.3"
SQLAlchemy = "^1.3"
transaction = "^2.4"
"zope.sqlalchemy" = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
